security/policies/gatekeeper/limits.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresources
        violation[{
          "msg": msg,
        }] {
          c := input.review.object.spec.containers[_]
          not has_field(c, "resources")
          msg := sprintf("container %s must set resources", [c.name])
        }
        violation[{
          "msg": msg,
        }] {
          c := input.review.object.spec.containers[_]
          not has_field(c.resources, "limits")
          msg := sprintf("container %s must set limits", [c.name])
        }
        violation[{
          "msg": msg,
        }] {
          c := input.review.object.spec.containers[_]
          not has_field(c.resources, "requests")
          msg := sprintf("container %s must set requests", [c.name])
        }
        has_field(obj, field) {
          obj[field]
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-requests-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
